<resources>
    <string name="app_name">NewYorkBike</string>
    <string name="str_scan">Scan</string>
    <string name="str_opening">Unlocking,Please wait...</string>
    <string name="str_open_lock_success">Unlock success</string>
    <string name="str_close_lock_success">Lock success</string>
    <string name="str_open_lock_fail">Unlock fail，code:%s</string>
    <string name="str_cancel">cancel</string>
    <string name="str_scan_hint">Align the frame to the qr code</string>
    <string name="str_is_cycling">Bicycle riding...</string>
    <string name="str_stop_cycling">Stop riding</string>
    <string name="title_my_wallet">Wallet</string>
    <string name="str_journey_record">Record</string>
    <string name="str_help">Help</string>
    <string name="str_item_setting">Setting</string>
    <string name="str_credit_grade">Credit：200</string>
    <string name="str_location_fail">Location permission denied</string>
    <string name="str_camera_fail">Camera permission denied</string>
</resources>
